--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,7 +16,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#SOP">SOP</a></li>
           <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -32,9 +32,9 @@
     </div>
   </header>
 
-  <section id="about" class="py-5">
+  <section id="SOP" class="py-5">
     <div class="container">
-      <h2 class="text-center mb-4">About Me</h2>
+      <h2 class="text-center mb-4">Statement of Purpose</h2>
       <p class="text-center mx-auto" style="max-width:600px;">
              จุดเริ่มต้นที่ทำให้กระผมสนใจคณะเทคโนโลยีสื่อสารมวลชน เมื่อตอนที่กระผมยังเป็นเด็ก แม่กระผมจะมีคอมพิวเตอร์ให้หนึ่งเครื่องเอาไว้ให้ดูแอนิเมชั่นหรือภาพยนตร์ ทำให้กระผมเกิดความสงสัยขึ้นมาว่าภาพและการทำงานของมันเกิดขึ้นมาได้อย่างไร กระผมจึงได้ไปหาข้อมูลจากเว็บไซต์ต่างๆทำให้กระผมได้รู้ว่าการทำแอนิเมชั่นเรื่องนึงต้องใช้ภาพวาดที่มีความละเอียดต่อเฟรมอย่างมาก ทำให้กระผมรู้สึกอยากลองศึกษาต่อในด้านการทำงานของมันและ เมื่อกระผมขึ้นชั้นประถมศึกษากระผมชอบในการเล่นเกมส์จึงได้ไปรู้จักเกมส์ๆนึงที่ชื่อว่า “Minecraft” เป็นเกมส์ที่กระผมชอบเป็นพิเศษ ทั้งกราฟิกส์ที่สามารถปรับแต่งให้สวยได้ตามความชอบอีกทั้งยังสามารถสร้างสิ่งที่เราจินตนาการออกมาได้ กระผมอยากลองสร้างเกมส์ที่สนุกและสวยงามด้วยการเติมฉากและแอนิเมชั่นที่ผมได้สร้างขึ้นลงไปในเกมส์นั้น กระผมจึงอยากจะหาความรู้เพิ่มเติมในสาขานี้มากขึ้น
              <br>
@@ -53,69 +53,87 @@
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="IMG_0240.PNG" class="card-img-top" alt="certificate1">
+            <img src="เกียรติบัตร 1.png" class="card-img-top" alt="certificate1">
             <div class="card-body">
               <h5 class="card-title">เกียรติบัตร 1</h5>
-              <p class="card-text">รายละเอียดสั้นๆ เช่น ชื่องานหรือหลักสูตรที่ได้รับ</p>
+              <p class="card-text">เกียรติบัตรเข้าร่วมการอบรมในค่าย Game web developer camp
+ณ วันที่ 21 กันยายน 2568</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="img7.jpg" class="card-img-top" alt="certificate2">
+            <img src="เกียรติบัตร 2.png" class="card-img-top" alt="certificate2">
             <div class="card-body">
               <h5 class="card-title">เกียรติบัตร 2</h5>
-              <p class="card-text">รายละเอียดสั้นๆ เช่น ชื่องานหรือหลักสูตรที่ได้รับ</p>
+              <p class="card-text">เกียรบัตรการแข่งขันกีฬาอีสปอร์ตชิงถ้วยพระราชทาน ประเภทการแข่งขัน ROV ระดับมัธยมศึกษา/อุดมศึกษา ได้เข้ารอบ 16 ทีม
+ณ มหาวิทยาลัยเจ้าพระยา จ.นครสวรรค์</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="IMG_0231.PNG" class="card-img-top" alt="certificate3">
+            <img src="เกียรติบัตร 3.png" class="card-img-top" alt="certificate3">
             <div class="card-body">
               <h5 class="card-title">เกียรติบัตร 3</h5>
-              <p class="card-text">รายละเอียดสั้นๆ เช่น ชื่องานหรือหลักสูตรที่ได้รับ</p>
+              <p class="card-text">เกียรติบัตรเข้าร่วม กิจกรรมเป็นผู้ที่มีจิตสาธารณะและมีส่วนร่วมในการประเมินสถานศึกษาจนได้รับ
+รางวัลพระราชทาน ระดับมัธยมศึกษา ขนาดใหญ่ระดับการศึกษาขั้นพื้น
+ฐาน ประจำปีการศึกษา 2567 และได้รับโล่รางวัลพระราชทาน
+ณ โรงเรียนธรรมศาสตร์คลองหลวงวิทยาคม</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="img10.jpg" class="card-img-top" alt="certificate4">
+            <img src="เกียรติบัตร 4.png" class="card-img-top" alt="certificate4">
             <div class="card-body">
               <h5 class="card-title">เกียรติบัตร 4</h5>
-              <p class="card-text">รายละเอียดสั้นๆ เช่น ชื่องานหรือหลักสูตรที่ได้รับ</p>
+              <p class="card-text">เกียรติบัตรชนะเลิศ
+การแข่งขันศิลปหัตถกรรมนักเรียน กิจกรรมการประกวดละครประวัติศาสตร์ ระดับเขตพื้นที่
+การศึกษา ครั้งที่ 71 ประจำปีการศึกษา 2566
+ณ โรงเรียนธรรมศาสตร์คลองหลวงวิทยาคม</p>
               </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="img13.jpg" class="card-img-top" alt="certificate5">
+            <img src="เกียรติบัตร 5.png" class="card-img-top" alt="certificate5">
             <div class="card-body">
               <h5 class="card-title">เกียรติบัตร 5</h5>
-              <p class="card-text">รายละเอียดสั้นๆ เช่น ชื่องานหรือหลักสูตรที่ได้รับ</p>
+              <p class="card-text">เกียรติบัตรโครงการ ของหายได้คืน
+ณ โรงเรียนธรรมศาสตร์คลองหลวงวิทยาคม</p>
               </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
-            <img src="img16.jpg" class="card-img-top" alt="certificate6">
+            <img src="เกียรติบัตร 6.png" class="card-img-top" alt="certificate6">
             <div class="card-body">
               <h5 class="card-title">เกียรติบัตร 6</h5>
-              <p class="card-text">รายละเอียดสั้นๆ เช่น ชื่องานหรือหลักสูตรที่ได้รับ</p>
+              <p class="card-text">เกียรติบัตรเข้าร่วมโครงการส่งเสริมคุณธรรมจริยธรรม
+ณ มหาวิทยาลัยมหาจุฬาลงกรณราชวิทยาลัย</p>
               </div>
           </div>
         </div>
-        <center>
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="img4.jpg" class="card-img-top" alt="certificate7">
+                    <img src="เกียรติบัตร 7.png" class="card-img-top" alt="certificate7">
                     <div class="card-body">
                         <h5 class="card-title">เกียรติบัตร 7</h5>
-                        <p class="card-text">รายละเอียดสั้นๆ เช่น ชื่องานหรือหลักสูตรที่ได้รับ</p>
+                        <p class="card-text">เกียรติบัตรเข้าร่วมกิจกรรมค่ายสังคม social relationship camp 2025
+ณ โรงเรียนธรรมศาตร์คลอหลวงวิทยาคม</p>
                     </div>
                 </div>
             </div>
-        </center>
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="เกียรติบัตร 8.png" class="card-img-top" alt="certificate7">
+                    <div class="card-body">
+                        <h5 class="card-title">เกียรติบัตร 8</h5>
+                        <p class="card-text">เเกียรติบัตรเข้าร่วมการอบรมออนไลน์หลักสูตรอีสปอร์ตในสถานศึกษาอละอาชีพ เพื่อพััฒนาทักษะในอนาคต สาขาการจัดการอีสปอร์ตและธุรกิจเกม วิทยาลัยนวัตกรรมและการจัดการ</p>
+                    </div>
+                </div>
+            </div>
       </div>
     </div>
   </section>
